fix: fix bug with alignment

--- a/src/scss/components/cart/_cart-page.scss
+++ b/src/scss/components/cart/_cart-page.scss
@@ -30,6 +30,10 @@
     align-self: flex-start;
     flex: 0 0 70%;
     box-shadow: $shadow;
+
+    @media screen and (max-width: $tablet) {
+      align-self: initial;
+    }
   }
 
   &__checkout {
